--- a/htdocs/style.css
+++ b/htdocs/style.css
@@ -1,13 +1,14 @@
 *{
 
   line-heigth: 1.6em;
-
+  max-width: 100%;
 
 }
 body{
-    background: url("sch.jpg");
+    background: url("bg.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    
 }
 
 .form {
