--- a/user-registration/style 1.css
+++ b/user-registration/style 1.css
@@ -1,22 +1,35 @@
+*{
+	max-width: 100%;
+}
+
+
 body{
 	background:#f4f4f4;
 	font-family:Arial, Helvetica, sans-serif;
 	font-size:16px;
 	line-height:1.6em;
-	margin:0;
+	
 }
 .logo img{
 	background:url("images/logo.png");
 	position:absolute;
-	width:50px;
-	height:50px;
-	color:white;
-	top:8px;
+	width:70px;
+	height:80px;
+	color:white;	
 	left:25px;
+	margin-right:20px;
+
 }
+
+.head{
+	font-family: Arial;
+	font-weight: 1000;
+	font-size: 20px;
+}
+
 #main-header{
 	background:coral;
-	height:70px;
+	height:75px;
 	overflow:hidden;
 }
 
@@ -25,28 +38,41 @@ body{
 	font-size:30px;
 	font-weight:bold;
 	color:white;
-	padding-left:100px;
+	text-shadow: 2px #333;
+	padding-left:120px;
+	padding-top: 20px;
+
 }
 
+.log{
+	display: inline;
+	position: absolute;
+	right: 3%;
+	word-spacing: 5%;
+}
 
-#navbar {
+.navbar {
 	background:#333;
 	width:100%;
-	height:60px;
-	overflow:hidden;
+	height:60px; 
 }
-#navbar li{
+
+.navbar li{
 	list-style:none;
 	color:white;
 	display:inline;
 	font-family:Arial, Times new roman;
-	padding:10px;
-	margin:0;
+	padding: 20px;
+	text-align: center;
+	font-size: 18px;
+	
+
 }
-#navbar li:hover{
+.navbar li:hover{
 	background:mediumseagreen;
+	color: white;
 }
-#navbar a{
+.navbar a{
 	text-decoration:none;
 	color:white;
 }
@@ -69,22 +95,31 @@ body{
 	font-size:50px;
 	margin-top:15%;
 	text-shadow:6px 6px #333;
-}
+} 
+
 .container{
 	overflow:hidden;
-	width:95%;
+	width: 100%;
 	margin:auto;
 }
+
+.container h1{
+	padding-top: 20px;
+}
+
 #main{
-	float:left;
-	width:70%;
-	font-size:20px;
+
+	color: #212529;
+	margin-top: 5%;
+	max-width:100%;
+	font-size:18px;
 	text-align:left;
 	box-sizing:border-box;
-	padding:0 5px;
+	padding:0 15px;
 	color:#333;
+	background: #f8f9fa;	
 }
-.aside{
+/*.aside{
 	float:right;
 	width:30%;
 	color:white;
@@ -93,9 +128,11 @@ body{
 	box-sizing:border-box;
 	padding:5px;
 	margin-top:3%;
-}
+}*/
 
 #main-footer{
+	max-width: 100%;
+	height: 150px;
 	display:block;
 	background:#333;
 	color:white;
@@ -106,6 +143,48 @@ body{
 	padding:20px;
 }
 
+.footer-logo img{
+	background-repeat: no-repeat;
+	max-width: 90px;
+	height: 100px;
+	position: absolute;
+	left: 10%;
+
+}
+
+.footer-logo h3{
+	box-sizing: border-box;
+	color: white;
+	font-family: Arial;
+	font-weight: bold;
+	font-size: 28px;
+	position: absolute;
+	left: 18%;
+	padding: 20px;
+}
+
+.footer-company{
+	height: 80px;
+	max-width: 100%;
+}
+
+.footer-company p{
+	position: relative;
+	font-size: 12px;
+	max-width: 50%;
+	font-family: Arial;
+	left: 19%;
+	top: 80%;
+	text-align: left;
+}
+
+.footer-span{
+	padding: 20px;
+	color: yellow;
+	position: relative;
+	left: 100%;
+	top: 10%;
+}
 /*------------------------------------------------------------------ Slider -------------------------------------------------------------------*/
 .cover-slides{
 	height: 50vh;
@@ -188,3 +267,5 @@ body{
 .cover-slides p a{
 	font-size: 18px;
 }
+
+
